--- a/style.css
+++ b/style.css
@@ -1,4 +1,44 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+    background-color: #000000;
+    color: #ffffff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
+h1 {
+    color: grey;
+    font-family: Verdana;
+}
 
+.maindiv {
+    background-color: #ffffff;
+    color: #000000;
+    width: 500px;
+    padding: 20px;
+    border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+button#compute {
+    margin-bottom: 10px;
+}
+
+.contents {
+    margin-left: 80px;
+}
+
+table td {
+    padding-bottom: 10px;
+}
+
+footer {
+    margin-top: 10px;
+}
+
+.labels {
+    width: 120px;
+}
+
+.highlight {
+    background-color: #ffff00;
+}
